2008-07-31  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/Makefile.am:
	* daemon/nwam-menu.c: (nwam_menu_init),
	(nwam_menu_recreate_menuitem_group),
	(nwam_menu_recreate_wifi_menuitems),
	(nwam_menu_recreate_if_menuitems), (nwam_menu_create_static_part),
	(on_activate_if_prior), (event_active_env_changed),
	(nwam_menu_create_if_menuitems), (nwam_menu_create_wifi_menuitems),
	(nwam_menu_create_env_menuitems), (nwam_menu_create_vpn_menuitems),
	(nwam_menu_get_statusicon_menu):
	* daemon/nwam-ui-picea.xml:
	Some code for Picea notification menus without building test.
	* daemon/nwam-ui.xml:
	* daemon/status_icon.h:
	* daemon/notify.c: (get_notification):
	* daemon/notify.h:
	Some code cleaning.

2008-06-03  Darren Kenny  <darren.kenny@sun.com>

	* scripts/link_icons.sh:
	  Fix the patching, just copy a working version over.

2008-06-03  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: (nwamui_daemon_set_property):
	  Set the active_env all of the time, regardless of nwam_loc API right
	  now. Will need to remove this later.

2008-06-03  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_net_conf_panel.c: 
	  Add reference to active profile combobox, and set to Custom by default.
	  (Should be set from ncp, but isn't right now).
	* common/nwamui_enm.c: 
	  Fix NULL Pointer crash, on clicking OK in VPN dialog.

2008-06-02  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c: (main): Use GOptionContext to parse options.
	* capplet/nwam-manager-properties.glade: Enable match_all|any_rbtn by
	default.
	* capplet/nwam_conn_conf_ip_panel.c: (show_changed_cb): Ipv6 lable uses
	mnemonic.
	* common/nwamui_daemon.c: Removed the very long essid.

2008-05-28  Darren Kenny  <darren.kenny@sun.com>

	* capplet/Makefile.am, daemon/Makefile.am:
	  Add NWAM_LIBS to link flags.
	* configure.in:
	  Add libnwam and -lnsl to link flags.
	* help/legal.xml, help/nwam-manager.xml:
	  Add template help docs (but need to install still).
	* capplet/main.c: (main):